// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders error mode 1`] = `
<span
  className="bp3-popover-wrapper"
>
  <span
    className="bp3-popover-target"
    onClick={[Function]}
  >
    <div
      className=""
      onKeyDown={[Function]}
    >
      <button
        className="BaseButton__StyledButton-sc-1bn4i2e-0 eVixNz"
        data-test-id="mode-picker-button"
        title="Current execution mode"
      >
        <div
          aria-label="error"
          className="Icon__IconWrapper-ovocpb-0 gmBOTS"
          role="img"
        />
        <span>
          Invalid Mode Selection
        </span>
        <div
          aria-label="expand_more"
          className="Icon__IconWrapper-ovocpb-0 gkQziu"
          role="img"
        />
      </button>
    </div>
  </span>
</span>
`;

exports[`renders multi mode pipelines 1`] = `
<span
  className="bp3-popover-wrapper"
>
  <span
    className="bp3-popover-target"
    onClick={[Function]}
  >
    <div
      className=""
      onKeyDown={[Function]}
    >
      <button
        className="BaseButton__StyledButton-sc-1bn4i2e-0 iBafTn"
        data-test-id="mode-picker-button"
        title="Current execution mode"
      >
        <span>
          Mode: mode_1
        </span>
        <div
          aria-label="expand_more"
          className="Icon__IconWrapper-ovocpb-0 gkQziu"
          role="img"
        />
      </button>
    </div>
  </span>
</span>
`;

exports[`renders multi mode pipelines 2`] = `
<span
  className="bp3-popover-wrapper"
>
  <span
    className="bp3-popover-target"
    onClick={[Function]}
  >
    <div
      className=""
      onKeyDown={[Function]}
    >
      <button
        className="BaseButton__StyledButton-sc-1bn4i2e-0 iBafTn"
        data-test-id="mode-picker-button"
        title="Current execution mode"
      >
        <span>
          Mode: mode_1
        </span>
        <div
          aria-label="expand_more"
          className="Icon__IconWrapper-ovocpb-0 gkQziu"
          role="img"
        />
      </button>
    </div>
  </span>
</span>
`;

exports[`renders single mode pipelines 1`] = `
<span
  className="bp3-popover-wrapper"
>
  <span
    className="bp3-popover-target"
    onClick={[Function]}
  >
    <div
      className=""
      onKeyDown={[Function]}
    >
      <button
        className="BaseButton__StyledButton-sc-1bn4i2e-0 iBafTn"
        data-test-id="mode-picker-button"
        disabled={true}
        title="To add a mode, add a ModeDefinition to the pipeline."
      >
        <span>
          Mode: default
        </span>
        <div
          aria-label="expand_more"
          className="Icon__IconWrapper-ovocpb-0 gkQziu"
          role="img"
        />
      </button>
    </div>
  </span>
</span>
`;

exports[`renders single mode pipelines 2`] = `
<span
  className="bp3-popover-wrapper"
>
  <span
    className="bp3-popover-target"
    onClick={[Function]}
  >
    <div
      className=""
      onKeyDown={[Function]}
    >
      <button
        className="BaseButton__StyledButton-sc-1bn4i2e-0 iBafTn"
        data-test-id="mode-picker-button"
        disabled={true}
        title="To add a mode, add a ModeDefinition to the pipeline."
      >
        <span>
          Mode: default
        </span>
        <div
          aria-label="expand_more"
          className="Icon__IconWrapper-ovocpb-0 gkQziu"
          role="img"
        />
      </button>
    </div>
  </span>
</span>
`;
